<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">SunShine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="text1">21°</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_settings">Settings</string>


    <string name="action_show_on_map">Map Location</string>
    <string name="action_share">Share</string>

    <string name="pref_location_key" translatable="false">Location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_default_val" translatable="false">Paris</string>

    <string name="pref_unit_key">unit_type</string>
    <string name="pref_unit_type_title">Units</string>
    <string name="pref_unit_type_dialog_title">Units</string>

    <string name="pref_unit_metric">cel</string>
    <string name="pref_unit_imperial">far</string>

    <string name="pref_unit_metric_val">°C</string>
    <string name="pref_unit_imperial_val">°F</string>

    <string-array name="pref_unit_type_entries">
        <item>@string/pref_unit_metric_val</item>
        <item>@string/pref_unit_imperial_val</item>
    </string-array>

    <string-array name="pref_unit_type_entries_values">
        <item>@string/pref_unit_metric</item>
        <item>@string/pref_unit_imperial</item>
    </string-array>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">Enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
     <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>


    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.iyedb.com</string>
    <string name="content_authority">com.iyedb.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_last_location">last_location</string>

    <string name="pref_use_current_location_key" translatable="false">use_current_location</string>
    <string name="pref_use_current_location_label">Use current location</string>

    <string name="pref_use_current_location_true">Enabled</string>
    <string name="pref_use_current_location_false">Disabled</string>
    <string name="pref_use_current_location_default" translatable="false">true</string>

</resources>
