<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:defaultValue="@string/pref_location_default_val"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title"
        android:dependency="@string/pref_use_current_location_key"
        />

    <ListPreference
        android:defaultValue="@string/pref_unit_metric"
        android:dialogTitle="@string/pref_unit_type_dialog_title"
        android:entries="@array/pref_unit_type_entries"
        android:entryValues="@array/pref_unit_type_entries_values"
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_type_title" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />


    <CheckBoxPreference
        android:title="@string/pref_use_current_location_label"
        android:key="@string/pref_use_current_location_key"
        android:summaryOff="@string/pref_use_current_location_false"
        android:summaryOn="@string/pref_use_current_location_true"
        android:defaultValue="@string/pref_use_current_location_default"
        android:disableDependentsState="true"/>


</PreferenceScreen>